deployments/apps/paste/01-paste.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paste
  namespace: paste
spec:
  selector:
    matchLabels:
      app: paste
  template:
    metadata:
      labels:
        app: paste
    spec:
      volumes:
        - name: paste-data
          persistentVolumeClaim:
            claimName: paste-volume-claim
      containers:
      - name: wastebin
        image: quxfoo/wastebin:latest
        ports:
          - containerPort: 8088
        resources:
          limits:
            cpu: '1000m'
            memory: '512Mi'
          requests:
            cpu: '500m'
            memory: '128Mi'
        volumeMounts:
        - mountPath: "/data"
          name: paste-data
---
apiVersion: v1
kind: Service
metadata:
  name: paste-svc
  namespace: paste
spec:
  selector:
    app: paste
  ports:
  - port: 80
    targetPort: 8088
